# eeg_dl_uncertainty

./: LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
scripts/data/: MPIlemon_dataset_creator.py  cau_eeg_dataset_creator.py  data_processing.json  data_processing_childMind.json  data_processing_greek_eeg.json  data_processing_mpi_lemon.json  data_processing_tdbrain.json  data_processing_tdbrain_full.json  data_processing_tdbrain_sample.json  download_datasets.py  greek_dataset_creator.py  tdbrain_dataset_creator.py
scripts/models/evaluation/: model_testing.py  normal_experiment.py  run_FGE_experiment.py  run_augmentation_ensemble_experiment.py  run_bagging_ensemble_experiment.py  run_depth_ensemble_experiment.py  run_mcd_experiment.py  run_snapshot_experiment.py  run_swag_experiment.py  run_weight_ensemble_experiment.py
scripts/models/training/: augment_search.py  dataset_search.py  dataset_version_search.py  dummy_model.py  hyperparameter_search.py  normal_model.py  optuna_augment2.py  optuna_bagging.py  optuna_bagging_ensemble.py  optuna_depth_ensemble.py  optuna_general.py  optuna_general_.py  optuna_hypersearch.py  optuna_mcd.py  optuna_optimizer.py  optuna_other_ensemble.py  run_FGE_experiment.py  (+7 more)
scripts/plots/: calculate_metrics_normal_run.py  calculate_performance_ensemble.py  create_plots_dataset_shift.py  create_plots_ood.py  datashift_result_plots.py  plot_util.py  result_plots.py  utils.py
tests/: test_my_func.py
tests/data/: test_CauEEGDataset.py
(+82 files in other folders)
