[metadata]
name = learnPyTest
description = testing this shit
author = Mats Tveter
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    eegDlUncertainty
install_requires =
    requests>=2
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest==8.0.2
    pytest-cov==2.12.1
    mypy==1.8.0
    tox==4.13.0
    flake8==7.0.0

[flake8]
max-line-length = 160